--- a/inst/README.Rmd
+++ b/inst/README.Rmd
@@ -14,8 +14,8 @@ knitr::opts_chunk$set(
 > Show an Image on an R Graphics Device
 
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
-[![Linux Build Status](https://travis-ci.org/MangoTheCat/showimage.svg?branch=master)](https://travis-ci.org/MangoTheCat/showimage)
-[![Windows Build status](https://ci.appveyor.com/api/projects/status/github/MangoTheCat/showimage?svg=true)](https://ci.appveyor.com/project/gaborcsardi/showimage)
+[![Linux Build Status](https://travis-ci.org/r-lib/showimage.svg?branch=master)](https://travis-ci.org/r-lib/showimage)
+[![Windows Build status](https://ci.appveyor.com/api/projects/status/github/r-lib/showimage?svg=true)](https://ci.appveyor.com/project/gaborcsardi/showimage)
 [![](http://www.r-pkg.org/badges/version/showimage)](http://www.r-pkg.org/pkg/showimage)
 [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/showimage)](http://www.r-pkg.org/pkg/showimage)
 
@@ -27,7 +27,7 @@ PNG files.
 ## Installation
 
 ```{r eval = FALSE}
-devtools::install_github("mangothecat/showimage")
+devtools::install_github("r-lib/showimage")
 ```
 
 ## Usage
@@ -42,4 +42,5 @@ show_image(tmp)
 
 ## License
 
-GPL-2 | GPL-3 © [Mango Solutions](https://github.com/mangothecat), Simon Urbanek
+GPL-2 | GPL-3 © [Mango Solutions](https://github.com/mangothecat),
+Simon Urbanek, [RStudio](https://github.com/rstudio)
