--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ knitr::opts_chunk$set(
   comment = "#>",
   tidy = FALSE,
   error = FALSE,
-  fig.path = "inst/",
+  fig.path = "./",
   fig.width = 8,
   fig.height = 8)
 ```
