--- a/README.Rmd
+++ b/README.Rmd
@@ -14,11 +14,11 @@ knitr::opts_chunk$set(
 > Show an Image on an R Graphics Device
 
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
-[![Linux Build Status](https://travis-ci.org/r-lib/showimage.svg?branch=master)](https://travis-ci.org/r-lib/showimage)
+[![Linux Build Status](https://travis-ci.org/r-lib/showimage.svg?branch=main)](https://travis-ci.org/r-lib/showimage)
 [![Windows Build status](https://ci.appveyor.com/api/projects/status/github/r-lib/showimage?svg=true)](https://ci.appveyor.com/project/gaborcsardi/showimage)
 [![](http://www.r-pkg.org/badges/version/showimage)](http://www.r-pkg.org/pkg/showimage)
 [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/showimage)](http://www.r-pkg.org/pkg/showimage)
-[![Coverage Status](https://img.shields.io/codecov/c/github/r-lib/showimage/master.svg)](https://codecov.io/github/r-lib/showimage?branch=master)
+[![Coverage Status](https://img.shields.io/codecov/c/github/r-lib/showimage/main.svg)](https://codecov.io/github/r-lib/showimage?branch=main)
 
 
 Sometimes it is handy to be able to view an image file on an
