--- a/README.Rmd
+++ b/README.Rmd
@@ -13,13 +13,13 @@ knitr::opts_chunk$set(
 
 > Show an Image on an R Graphics Device
 
+<!-- badges: start -->
+[![R-CMD-check](https://github.com/r-lib/showimage/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/r-lib/showimage/actions/workflows/R-CMD-check.yaml)
 [![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
-[![Linux Build Status](https://travis-ci.org/r-lib/showimage.svg?branch=main)](https://travis-ci.org/r-lib/showimage)
-[![Windows Build status](https://ci.appveyor.com/api/projects/status/github/r-lib/showimage?svg=true)](https://ci.appveyor.com/project/gaborcsardi/showimage)
 [![](http://www.r-pkg.org/badges/version/showimage)](http://www.r-pkg.org/pkg/showimage)
 [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/showimage)](http://www.r-pkg.org/pkg/showimage)
-[![Coverage Status](https://img.shields.io/codecov/c/github/r-lib/showimage/main.svg)](https://codecov.io/github/r-lib/showimage?branch=main)
-
+[![Codecov test coverage](https://codecov.io/gh/r-lib/showimage/branch/main/graph/badge.svg)](https://app.codecov.io/gh/r-lib/showimage?branch=main)
+<!-- badges: end -->
 
 Sometimes it is handy to be able to view an image file on an
 R graphics device. This package just does that. Currently it supports
