--- a/README.Rmd
+++ b/README.Rmd
@@ -15,9 +15,9 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/r-lib/showimage/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/r-lib/showimage/actions/workflows/R-CMD-check.yaml)
-[![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
-[![](http://www.r-pkg.org/badges/version/showimage)](http://www.r-pkg.org/pkg/showimage)
-[![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/showimage)](http://www.r-pkg.org/pkg/showimage)
+[![Project Status: Active - The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
+[![](https://www.r-pkg.org/badges/version/showimage)](https://www.r-pkg.org/pkg/showimage)
+[![CRAN RStudio mirror downloads](https://cranlogs.r-pkg.org/badges/showimage)](https://www.r-pkg.org/pkg/showimage)
 [![Codecov test coverage](https://codecov.io/gh/r-lib/showimage/branch/main/graph/badge.svg)](https://app.codecov.io/gh/r-lib/showimage?branch=main)
 <!-- badges: end -->
 
